# suopX-py

./: .gitignore  Cargo.toml  README.md  REFACTOR_PLAN.md  REVIEW_PLAN.md  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: bench_m7.R  bench_m7.py
soupx/: __init__.py  _bridge.py  _channel.py  _version.py
soupx/plotting/: __init__.py  _plots.py
src/: alloc.rs  contamination.rs  expand.rs  lib.rs  markers.rs  non_expressing.rs  soup_profile.rs  sparse.rs  stats.rs
src/adjustment/: mod.rs  multinomial.rs  soup_only.rs  subtraction.rs
tests/: reconcile_stats.py  test_alloc.py  test_basic.py  test_sparse_bridge.py  test_stats_accuracy.py
