[package]
name = "soupx-core"
version = "0.1.0"
edition = "2024"
description = "Rust core engine for SoupX - ambient RNA contamination removal for scRNA-seq"
license = "MIT"
repository = "https://github.com/constantAmateur/SoupX"

[lib]
name = "soupx_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
sprs = "0.11"
ndarray = "0.16"
statrs = "0.16"
rayon = "1.10"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
