[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "soupx"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "scanpy>=1.9",
    "anndata>=0.8",
    "scipy>=1.9",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "tqdm>=4.64",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "black",
    "ruff",
    "jupyter",
]
